@@ -495,18 +495,11 @@ function commandAlbumSortKey(command, genre) {
     return baseSort;
 }
 
-const VALID_ALBUM_SORTS = new Set(["album", "artistalbum", "artflow", "yearalbum", "yearartistalbum"]);
-const VALID_TRACK_SORTS = new Set(["title", "tracknum", "albumtrack", "yearalbumtrack", "artisttitle", "yeartitle"]);
-
 function getAlbumSort(command, genre) {
     let key = commandAlbumSortKey(command, genre);
     let def = ALBUM_SORT_KEY==key || (ALBUM_SORT_KEY+"C")==key ? "album" : "yearalbum";
     let parts = getLocalStorageVal(key, def).split(".");
-    let val = {by:parts[0], rev:parts.length>1};
-    if (!VALID_ALBUM_SORTS.has(val.by)) {
-        val.by = def;
-    }
-    return val;
+    return {by:parts[0], rev:parts.length>1};
 }
 
 function setAlbumSort(command, genre, sort, reverse) {
@@ -517,11 +510,7 @@ function getTrackSort(stdItem) {
     let key = stdItem==STD_ITEM_COMPOSITION_TRACKS ? "compositionTrackSort" : stdItem==STD_ITEM_WORK ? "workTrackSort" : "trackSort";
     let def = "yearalbumtrack";
     let parts = getLocalStorageVal(key, def).split(".");
-    let val = {by:parts[0], rev:parts.length>1};
-    if (!VALID_TRACK_SORTS.has(val.by)) {
-        val.by = def;
-    }
-    return val;
+    return {by:parts[0], rev:parts.length>1};
 }
 
 function setTrackSort(sort, reverse, stdItem) {
