@@ -3,6 +3,7 @@
 1. Fix static clock screensaver.
 2. Fix storing of grid/list for home screen.
 3. Fix issue with press of back button navigating home.
+4. Fix persistence of "Newest" album sort.
 
 6.0.0
 -----
